@@ -19,9 +19,10 @@ package com.regnosys.rosetta.generator.java.types;
 import java.util.Collections;
 import java.util.List;
 
+import com.regnosys.rosetta.rosetta.simple.Data;
 import com.regnosys.rosetta.types.RDataType;
-import com.regnosys.rosetta.types.RType;
 import com.regnosys.rosetta.types.TypeSystem;
+import com.regnosys.rosetta.utils.ModelIdProvider;
 import com.rosetta.model.lib.RosettaModelObject;
 import com.rosetta.util.DottedPath;
 import com.rosetta.util.types.JavaClass;
@@ -34,16 +35,14 @@ public class RJavaPojoInterface extends JavaClass<RosettaModelObject> {
 	
 	private final RDataType data;
 	
+	private final ModelIdProvider modelIdProvider;
 	private final TypeSystem typeSystem;
 
-	public RJavaPojoInterface(RDataType data, TypeSystem typeSystem) {
+	public RJavaPojoInterface(RDataType data, ModelIdProvider modelIdProvider, TypeSystem typeSystem) {
 		this.data = data;
 		
+		this.modelIdProvider = modelIdProvider;
 		this.typeSystem = typeSystem;
-	}
-	
-	public RDataType getRType() {
-		return data;
 	}
 
 	@Override
@@ -77,11 +76,11 @@ public class RJavaPojoInterface extends JavaClass<RosettaModelObject> {
 
 	@Override
 	public List<JavaClass<?>> getInterfaceDeclarations() {
-		RType superType = typeSystem.stripFromTypeAliases(data.getSuperType());
-		if (superType != null && superType instanceof RDataType) {
-			return Collections.singletonList(new RJavaPojoInterface((RDataType) superType, typeSystem));
+		Data superType = data.getData().getSuperType();
+		if (superType == null) {
+			return List.of(ROSETTA_MODEL_OBJECT);
 		}
-		return List.of(ROSETTA_MODEL_OBJECT);
+		return Collections.singletonList(new RJavaPojoInterface(new RDataType(superType, modelIdProvider.getSymbolId(superType)), modelIdProvider, typeSystem));
 	}
 	
 	@Override
